added steganography.min.js to be access globally

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       }
     </style>
     <title>React App</title>
+    <script src="./steganography.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
