--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       import { Buffer } from "buffer";
       window.Buffer = Buffer;
     </script> 
+    <script  type="text/javascript" src="./steganography.min.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
